--- a/research/wq-alpha-evolution/index.html
+++ b/research/wq-alpha-evolution/index.html
@@ -275,20 +275,14 @@ title: "WQ BRAIN Alpha Evolution"
 <!-- 1. System Architecture -->
 <h2>1. 시스템 아키텍처</h2>
 
-<p>시스템은 11개의 핵심 모듈과 1개의 외부 라이브러리로 구성된다. 각 모듈은 단일 책임 원칙에 따라 분리되어 있으며, <code>EvolutionEngine</code>이 중앙 오케스트레이터 역할을 한다. 아래 접기/펼치기 다이어그램은 전체 시스템의 모듈 의존성, 실행 파이프라인, 세대 루프, 알고리즘 상세, 7라운드 전략, 데이터 플로우를 포함하는 12개 섹션의 종합 구조도이다.</p>
+<p>시스템은 11개의 핵심 모듈과 1개의 외부 라이브러리로 구성된다. 각 모듈은 단일 책임 원칙에 따라 분리되어 있으며, <code>EvolutionEngine</code>이 중앙 오케스트레이터 역할을 한다. 아래 링크를 통해 전체 시스템의 모듈 의존성, 실행 파이프라인, 세대 루프, 알고리즘 상세, 7라운드 전략, 데이터 플로우를 포함하는 12개 섹션의 종합 구조도를 확인할 수 있다.</p>
 
-<!-- Full System Architecture (collapsible) -->
-<details style="margin:25px 0 30px;border:1px solid #e0e4ea;border-radius:8px;background:#fafbfd;">
-<summary style="padding:14px 20px;cursor:pointer;font-family:'Inter',sans-serif;font-size:13px;font-weight:600;color:#1d3557;letter-spacing:.3px;list-style:none;display:flex;align-items:center;gap:8px;">
-<span style="font-size:16px;transition:transform .2s;">&#9654;</span>
-Figure 1: 전체 시스템 상세 구조도 (Full System Architecture Diagram)
-</summary>
-<div style="padding:0 16px 16px;">
-<iframe src="/architecture-diagram.html" style="width:100%;height:85vh;border:none;border-top:1px solid #e0e4ea;" loading="lazy"></iframe>
-<p class="note" style="text-align:center;margin-top:8px;">12개 섹션: 모듈 의존성, 실행 파이프라인, 세대 루프, 유전 연산자, Island 토폴로지, 7라운드 전략, 핵심 알고리즘(SHADE/MAP-Elites/NSGA-II/UCB1/ε-Lexicase), Surrogate/Pattern Learner, Individual 라이프사이클, 체크포인트, 탐색 공간, 전체 데이터 플로우</p>
+<!-- Full System Architecture (link to standalone page) -->
+<div style="margin:25px 0 30px;border:1px solid #e0e4ea;border-radius:8px;background:#fafbfd;padding:20px 24px;text-align:center;">
+<p style="font-family:'Inter',sans-serif;font-size:13px;font-weight:600;color:#1d3557;letter-spacing:.3px;margin:0 0 12px;">Figure 1: 전체 시스템 상세 구조도 (Full System Architecture Diagram)</p>
+<p style="font-size:11.5px;color:#777;margin:0 0 16px;">12개 섹션: 모듈 의존성, 실행 파이프라인, 세대 루프, 유전 연산자, Island 토폴로지, 7라운드 전략, 핵심 알고리즘(SHADE/MAP-Elites/NSGA-II/UCB1/ε-Lexicase), Surrogate/Pattern Learner, Individual 라이프사이클, 체크포인트, 탐색 공간, 전체 데이터 플로우</p>
+<a href="/architecture-diagram.html" target="_blank" rel="noopener" style="display:inline-block;padding:10px 28px;background:#1d3557;color:#fff;text-decoration:none;border-radius:6px;font-family:'Inter',sans-serif;font-size:12px;font-weight:600;letter-spacing:.5px;">구조도 전체 화면으로 보기 →</a>
 </div>
-</details>
-<script>document.querySelectorAll('details').forEach(d=>{d.addEventListener('toggle',()=>{const a=d.querySelector('summary span');if(a)a.style.transform=d.open?'rotate(90deg)':'rotate(0)';})})</script>
 
 <table>
 <caption>표 1: 모듈 구성</caption>
