v5: 블로그 연구 페이지 업데이트 - 정체감지 완화, LLM 시드 통합, SC 필터 정밀화, Surrogate 완화, 아키텍처 다이어그램 v5 반영

--- a/architecture-diagram.html
+++ b/architecture-diagram.html
@@ -1334,6 +1334,210 @@ th { background: #000; color: #fff; font-weight: bold; }
 </div>
 
 <!-- ═══════════════════════════════════════════════════════════ -->
+<!-- SECTION 10: 한눈에 보는 진화 구조 (한글 시각 가이드) -->
+<!-- ═══════════════════════════════════════════════════════════ -->
+<div class="section">
+  <span class="section-title">10. 한눈에 보는 진화 구조 — 시각 가이드</span>
+
+  <!-- A. 한 세대의 인구 구성 -->
+  <h3>A. 한 세대(世代)의 인구 구성 — 누가 살아남나?</h3>
+  <p class="note">예시: R4 기준, 섬 하나당 인구 15명 (pop=60 ÷ 4섬)</p>
+
+  <div style="display:flex; height:40px; border:2px solid #000; margin:8px 0; font-size:10px; line-height:40px; text-align:center;">
+    <div style="width:20%; background:#000; color:#fff; font-weight:bold;">엘리트 보존 20%</div>
+    <div style="width:50%; background:#666; color:#fff;">교배+변이 자식 ~50%</div>
+    <div style="width:15%; background:#aaa; color:#000; font-weight:bold;">다양성 주입 15%</div>
+    <div style="width:15%; background:#ddd; color:#000;">랜덤 채움</div>
+  </div>
+
+  <div class="row" style="margin-top:8px;">
+    <div class="col">
+      <div class="mod">
+        <div class="mod-name">엘리트 보존 (적자생존)</div>
+        이전 세대 최고 점수 개체를 그대로 복사<br>
+        자연계: 가장 강한 개체가 다음 세대에 유전자 전달<br>
+        동점 시 수식이 짧은 쪽 우선 (간결한 유전자 유리)
+      </div>
+    </div>
+    <div class="col">
+      <div class="mod">
+        <div class="mod-name">교배+변이 자식 (유성생식 + 돌연변이)</div>
+        부모 2명 교배 = 유전자 재조합 (crossover)<br>
+        부모 1명 변이 = DNA 복제 오류 (mutation)<br>
+        10가지 연산자 중 UCB1이 자동 선택<br>
+        <strong>대부분 해롭지만, 가끔 유리한 형질 발현</strong>
+      </div>
+    </div>
+    <div class="col">
+      <div class="mod">
+        <div class="mod-name">다양성 주입 (외래종 유입)</div>
+        인구가 비슷한 유전자로 수렴하는 걸 방지<br>
+        덜 쓰인 필드 그룹에서 완전 새로운 개체 투입<br>
+        자연계: 외래종이 기존 생태계에 없던 유전자 유입
+      </div>
+    </div>
+  </div>
+
+  <div class="divider"></div>
+
+  <!-- B. 10개 연산자 비중 -->
+  <h3>B. 10가지 유전 연산자 — 비중과 역할</h3>
+  <p class="note">UCB1이 자동 조절 — 잘 되는 연산자에 더 많은 기회 부여. 아래는 실제 R4 실행 결과 비중.</p>
+
+  <!-- Horizontal bar chart style -->
+  <table style="font-size:10px;">
+    <tr><th style="width:160px;">연산자</th><th style="width:50px;">비중</th><th>비율 바</th><th style="width:280px;">설명</th></tr>
+    <tr>
+      <td><strong>서브트리 변이</strong></td><td>29%</td>
+      <td><div style="background:#000;height:14px;width:290px;"></div></td>
+      <td>가지 하나를 새 랜덤 가지로 교체 (돌연변이)</td>
+    </tr>
+    <tr>
+      <td><strong>서브트리 교배</strong></td><td>23%</td>
+      <td><div style="background:#333;height:14px;width:230px;"></div></td>
+      <td>부모A 가지 ↔ 부모B 가지 교환 (유성생식)</td>
+    </tr>
+    <tr>
+      <td><strong>의미 교배</strong></td><td>22%</td>
+      <td><div style="background:#555;height:14px;width:220px;"></div></td>
+      <td>두 수식 가중 평균: w·A + (1-w)·B</td>
+    </tr>
+    <tr>
+      <td><strong>DE 교배</strong></td><td>21%</td>
+      <td><div style="background:#777;height:14px;width:210px;"></div></td>
+      <td>차분 진화: target + F·(donor₁ - donor₂)</td>
+    </tr>
+    <tr>
+      <td>헤드리스 치킨</td><td>~2%</td>
+      <td><div style="background:#999;height:14px;width:20px;"></div></td>
+      <td>부모 + 랜덤 트리 교배 (새 유전자 주입)</td>
+    </tr>
+    <tr>
+      <td>미세 변이</td><td>~1%</td>
+      <td><div style="background:#aaa;height:14px;width:10px;"></div></td>
+      <td>window ±1 변경 (20일→21일)</td>
+    </tr>
+    <tr>
+      <td>호이스트</td><td>~1%</td>
+      <td><div style="background:#bbb;height:14px;width:10px;"></div></td>
+      <td>하위 가지를 루트로 승격 (단순화)</td>
+    </tr>
+    <tr>
+      <td>축소</td><td>~1%</td>
+      <td><div style="background:#ccc;height:14px;width:10px;"></div></td>
+      <td>복잡한 가지 → 단일 잎(leaf)으로 교체</td>
+    </tr>
+  </table>
+
+  <div class="divider"></div>
+
+  <!-- C. 이주 시각화 -->
+  <h3>C. 섬 간 이주 — 2세대마다 우수 개체 교환</h3>
+
+  <div style="text-align:center; margin:12px 0; font-family:'Courier New',monospace; font-size:11px; line-height:2;">
+<pre style="display:inline-block; text-align:left;">
+            ┌─────────────┐
+            │   섬 0      │
+            │  15명 독립진화│
+            └──────┬──────┘
+       이주 2명 ↗       ↘ 이주 2명
+      (최고1+다양1)      (최고1+다양1)
+  ┌─────────────┐         ┌─────────────┐
+  │   섬 3      │         │   섬 1      │
+  │  15명 독립진화│         │  15명 독립진화│
+  └──────┬──────┘         └──────┬──────┘
+       이주 2명 ↖       ↙ 이주 2명
+      (최고1+다양1)      (최고1+다양1)
+            ┌─────────────┐
+            │   섬 2      │
+            │  15명 독립진화│
+            └─────────────┘
+
+  ※ 시계 방향 링 토폴로지: 0→1→2→3→0
+  ※ 이주민 선택: 1번째 = 점수 최고, 나머지 = 받는 섬과 필드 겹침 최소
+  ※ 받는 섬의 최하위 개체를 교체 (약자 도태)
+</pre>
+  </div>
+
+  <div class="mod">
+    <div class="mod-name">이주 규칙 상세</div>
+    <strong>빈도:</strong> 2세대마다 실행<br>
+    <strong>이주 수:</strong> k = max(1, ⌊0.1 × 섬인구⌋) 명<br>
+    <strong>선택 기준:</strong> 첫 번째 = IQC 점수 최고. 나머지 = 받는 섬 상위 10명의 필드와 겹침이 가장 적은 개체<br>
+    <strong>교체 대상:</strong> 받는 섬에서 점수 최하위 개체를 밀어냄<br>
+    <strong>생물학 비유:</strong> 종자 분산(seed dispersal) — 고립된 섬에 새 유전자 유입으로 근친교배 방지
+  </div>
+
+  <div class="divider"></div>
+
+  <!-- D. 카타클리즘 전후 비교 -->
+  <h3>D. 카타클리즘 (대멸종) — 전후 비교</h3>
+  <p class="note">2세대 이상 최고 점수 변화 없으면 발동 — 인구의 50%를 교체</p>
+
+  <div style="margin:8px 0;">
+    <div class="small" style="font-weight:bold; margin-bottom:4px;">멸종 전 (정체 상태):</div>
+    <div style="display:flex; height:35px; border:2px solid #000; font-size:10px; line-height:35px; text-align:center;">
+      <div style="width:100%; background:#888; color:#fff; font-weight:bold;">전부 비슷한 수식 — 다양성 0% — 진화 정체</div>
+    </div>
+
+    <div class="arrow-down" style="font-size:20px; font-weight:bold;">▼ 대멸종 발동 ▼</div>
+
+    <div class="small" style="font-weight:bold; margin-bottom:4px;">멸종 후 (재인구):</div>
+    <div style="display:flex; height:35px; border:2px solid #000; font-size:10px; line-height:35px; text-align:center;">
+      <div style="width:50%; background:#000; color:#fff; font-weight:bold;">생존자 50%</div>
+      <div style="width:20%; background:#555; color:#fff;">MAP 시드 30%</div>
+      <div style="width:12%; background:#999; color:#fff;">멀티라인 15%</div>
+      <div style="width:18%; background:#ccc; color:#000;">랜덤+전략</div>
+    </div>
+  </div>
+
+  <div class="row" style="margin-top:8px;">
+    <div class="col">
+      <div class="mod">
+        <div class="mod-name">생존자 50% (적자생존)</div>
+        파레토 순위(NSGA-II) 상위 절반 보존<br>
+        가장 강한 유전자는 대멸종에서도 살아남음
+      </div>
+    </div>
+    <div class="col">
+      <div class="mod">
+        <div class="mod-name">MAP 시드 30% (다양한 니치에서)</div>
+        MAP-Elites 아카이브의 다양한 행동 영역에서 추출<br>
+        변이 강도 1.5배로 변형 후 투입<br>
+        기존 인구와 완전히 다른 구조의 수식
+      </div>
+    </div>
+    <div class="col">
+      <div class="mod">
+        <div class="mod-name">멀티라인 15% + 랜덤</div>
+        Regular Expression (다변수 수식) 새로 생성<br>
+        나머지: 전략 템플릿(40%) + 순수 랜덤(60%)<br>
+        완전히 새로운 유전자 풀 주입
+      </div>
+    </div>
+  </div>
+
+  <div class="mod" style="margin-top:8px;">
+    <div class="mod-name">생물학 비유: 백악기-팔레오기 대멸종 (K-Pg)</div>
+    6600만 년 전 소행성 충돌로 공룡 포함 75%의 종이 멸종.<br>
+    하지만 살아남은 포유류가 빈 생태적 지위(niche)를 차지하며 폭발적으로 다양화 = "적응 방산(adaptive radiation)".<br>
+    카타클리즘도 동일: 정체된 인구의 50%를 제거하고, MAP-Elites의 다양한 니치에서 새 개체를 투입.<br>
+    <strong>살아남은 엘리트 + 완전히 다른 구조의 신규 개체 → 국소 최적(local optimum)에서 탈출.</strong>
+  </div>
+
+  <div class="divider"></div>
+
+  <!-- E. 전체 흐름 한줄 요약 -->
+  <h3>E. 전체 흐름 한줄 요약</h3>
+  <div class="mod mod-thick" style="text-align:center; font-size:11px; line-height:2;">
+    4개의 섬에서 독립적으로 수식(알파)을 진화시킨다.<br>
+    매 세대: 엘리트 보존 → 교배/변이로 자식 생성 → API 평가 → 적자생존.<br>
+    2세대마다 이주, 정체 시 대멸종. 7라운드 반복하며 점점 정밀하게 최적화.<br>
+    <strong>최종 목표: BRAIN 플랫폼 제출 기준을 통과하는 알파 수식 발견.</strong>
+  </div>
+</div>
+
+<!-- ═══════════════════════════════════════════════════════════ -->
 <!-- FOOTER -->
 <!-- ═══════════════════════════════════════════════════════════ -->
 <div style="border-top: 2px solid #000; margin-top: 20px; padding-top: 8px; font-size: 9px; color: #666; text-align: center;">
